# stock-price-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: download-nasdaq-historical-data.ipynb
predictor/: .gitignore  checker.ipynb  lstm-predictor.ipynb
preprocessor/: segment-symbols.ipynb
